feat: add remaining crud endpoints
